@@ -30,8 +30,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import static com.example.gympt.notification.enums.NotificationType.REVIEW_APPROVED;
-import static com.example.gympt.notification.enums.NotificationType.REVIEW_REJECTED;
+import static com.example.gympt.notification.enums.NotificationType.*;
 
 @Service
 @Transactional
@@ -110,7 +109,7 @@ public class ReviewServiceImpl implements ReviewService {
     public List<ReviewResponseDTO> getReviewListByTrainer(String email) {
         Trainers trainers = getTrainerEmail(email);
         return trainers.getReviews().stream().map(ReviewResponseDTO::from).toList();
-    } //TODO: 테스트 후 이건 삭제하기
+    }
 
     @Override
     public void deleteByGym(Gym gym) {
@@ -128,82 +127,143 @@ public class ReviewServiceImpl implements ReviewService {
     }
 
 
-    //비동기 호출
+
+
     @Transactional
     public void checkReviewModeration(Review review) {
         String reviewText = review.getContent();
-
         List<String> reviewTexts = List.of(reviewText);
 
-        moderationService.moderateReview(reviewTexts)
-                .subscribe(     //result : 떡볶이를 담을 접시
-                        //review : 신전 떡볶이
-                        // subscribe 안에서 실행되는 동작은 전부 비동기작용이고
-                        // 별도의 스레드에서 실행되기 때문에 트랜젝션 처리와 관련이 없다
-                        result -> handleModerationResult(result, review),
-                        error -> {
-                            log.error("모더레이션 API 오류: {}", error.getMessage());
-                            error.printStackTrace();
-                        }
+        log.info("리뷰 ID: {} 모더레이션 요청 시작", review.getId());
 
+        moderationService.moderateReview(reviewTexts)
+                .doOnSubscribe(s -> log.info("리뷰 ID: {} 모더레이션 API 호출 구독 시작", review.getId()))
+                .doOnNext(result -> log.info("리뷰 ID: {} 모더레이션 결과 수신 완료", review.getId()))
+                .subscribe(
+                        result -> {
+                            try {
+                                log.info("리뷰 ID: {} 모더레이션 결과 처리 시작", review.getId());
+                                handleModerationResult(result, review);
+                            } catch (Exception e) {
+                                log.error("리뷰 ID: {} 모더레이션 결과 처리 중 예외 발생: {}", review.getId(), e.getMessage(), e);
+                            }
+                        },
+                        error -> {
+                            log.error("리뷰 ID: {} 모더레이션 API 호출 실패: {}", review.getId(), error.getMessage());
+                            notificationService.sendNotificationToMember(
+                                    review.getMember(),
+                                    "리뷰 검토 중 오류가 발생했습니다",
+                                    "시스템 오류가 발생했습니다. 나중에 다시 시도해주세요.",
+                                    PROCESSING_ERROR
+                            );
+                            error.printStackTrace();
+                        },
+                        () -> log.info("리뷰 ID: {} 모더레이션 프로세스 완료", review.getId())
                 );
     }
 
-    //리뷰 검사 결과에 따라 별도의 트랜잭션으로 리뷰 상태가 업데이트 , 배달 완료된 신전 떡볶이
     @Transactional
     public void handleModerationResult(Map<String, Object> result, Review review) {
+        log.info("리뷰 ID: {} 모더레이션 결과 처리 함수 시작", review.getId());
+
         try {
+            // 결과 데이터 검증
+            if (result == null) {
+                log.error("리뷰 ID: {} 모더레이션 결과가 null입니다", review.getId());
+                return;
+            }
+
             // ChatGPT API 응답에서 결과 추출
+            if (!result.containsKey("results")) {
+                log.error("리뷰 ID: {} 모더레이션 결과에 'results' 키가 없습니다: {}", review.getId(), result);
+                return;
+            }
+
             List<Map<String, Object>> results = (List<Map<String, Object>>) result.get("results");
 
-            if (results != null && !results.isEmpty()) {
-                // ChatGPT API 응답으로 변환된 결과 가져오기
-                Map<String, Object> gptResult = results.get(0);
-                boolean flagged = (boolean) gptResult.get("flagged");
+            if (results == null || results.isEmpty()) {
+                log.error("리뷰 ID: {} 모더레이션 결과 리스트가 비어있습니다", review.getId());
+                return;
+            }
 
-                if (flagged) {
+            // ChatGPT API 응답으로 변환된 결과 가져오기
+            Map<String, Object> gptResult = results.get(0);
+
+            if (!gptResult.containsKey("flagged")) {
+                log.error("리뷰 ID: {} 모더레이션 결과에 'flagged' 키가 없습니다: {}", review.getId(), gptResult);
+                return;
+            }
+
+            boolean flagged = (boolean) gptResult.get("flagged");
+            log.info("리뷰 ID: {} 모더레이션 결과 - flagged: {}", review.getId(), flagged);
+
+            if (flagged) {
+                try {
                     // 어떤 카테고리가 위반되었는지 확인
-                    Map<String, Boolean> categories = (Map<String, Boolean>) gptResult.get("categories");
+                    if (!gptResult.containsKey("categories")) {
+                        log.warn("리뷰 ID: {} 위반으로 표시되었으나 categories 정보가 없습니다", review.getId());
+                    }
+
+                    Map<String, Boolean> categories = (Map<String, Boolean>) gptResult.getOrDefault("categories", Map.of());
 
                     // 위반 카테고리들을 로그로 기록
                     List<String> violatedCategories = categories.entrySet().stream()
                             .filter(Map.Entry::getValue)
                             .map(Map.Entry::getKey)
-                            .collect(Collectors.toList());
+                            .toList();
 
-                    // 위반 이유 로깅 (reason 필드가 있는 경우)
+
                     String reason = (String) gptResult.getOrDefault("reason", "알 수 없는 이유");
                     log.info("리뷰 ID: {}가 다음 카테고리에서 위반 감지됨: {}, 이유: {}",
                             review.getId(), violatedCategories, reason);
 
                     // 리뷰 비활성화
                     review.changeActive(false);
+                    log.info("리뷰 ID: {} 비활성화 처리 완료", review.getId());
+
                     reviewRepository.save(review);
+                    log.info("리뷰 ID: {} 저장 완료", review.getId());
+
+                    log.info("리뷰 ID: {} 알림 발송 시작 - 위반 검출", review.getId());
                     notificationService.sendNotificationToMember(
                             review.getMember(),
                             "리뷰에 부적절한 내용이 감지되었습니다",
                             "리뷰 정책 위반이 감지되었습니다",
                             REVIEW_REJECTED
                     );
-                } else {
+                    log.info("리뷰 ID: {} 알림 발송 완료 - 위반 검출", review.getId());
+                } catch (Exception e) {
+                    log.error("리뷰 ID: {} 위반 처리 중 예외 발생: {}", review.getId(), e.getMessage(), e);
+                }
+            } else {
+                try {
                     // 문제없는 리뷰는 active를 true로 설정
                     review.changeActive(true);
+                    log.info("리뷰 ID: {} 활성화 처리 완료", review.getId());
+
                     reviewRepository.save(review);
+                    log.info("리뷰 ID: {} 저장 완료", review.getId());
+
+                    log.info("리뷰 ID: {} 알림 발송 시작 - 승인", review.getId());
                     notificationService.sendNotificationToMember(
                             review.getMember(),
                             "리뷰가 승인되었습니다",
                             "귀하의 리뷰에 감사드립니다",
                             REVIEW_APPROVED
                     );
+                    log.info("리뷰 ID: {} 알림 발송 완료 - 승인", review.getId());
+
+                    log.info("리뷰 ID: {} 리뷰 요약 업데이트 시작", review.getId());
                     reviewSummaryService.updateReviewSummary(review);
+                    log.info("리뷰 ID: {} 리뷰 요약 업데이트 완료", review.getId());
+                } catch (Exception e) {
+                    log.error("리뷰 ID: {} 승인 처리 중 예외 발생: {}", review.getId(), e.getMessage(), e);
                 }
             }
         } catch (Exception e) {
-            log.error("모더레이션 결과 처리 중 오류: {}", e.getMessage(), e);
-
+            log.error("리뷰 ID: {} 모더레이션 결과 처리 중 예외 발생: {}", review.getId(), e.getMessage(), e);
         }
     }
-
 
     private Trainers getTrainer(Long trainerId) {
         return trainerRepository.findById(trainerId).orElseThrow(() -> new EntityNotFoundException("존재하지 않는 트레이너 이름입니다 " + trainerId));
